[gd_scene load_steps=2 format=3 uid="uid://g5r481tpry0f"]

[ext_resource type="Script" uid="uid://b7143b0ww7sy7" path="res://addons/xml_converter/xml_panel.gd" id="1_xug4f"]

[node name="xml_panel" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_left = -4.0
offset_top = -223.0
offset_right = 875.0
offset_bottom = 471.0
scale = Vector2(1.29335, 1.18112)
script = ExtResource("1_xug4f")

[node name="LineEdit1" type="LineEdit" parent="."]
unique_name_in_owner = true
layout_mode = 2
offset_left = 3.86593
offset_top = 55.8792
offset_right = 176.866
offset_bottom = 86.8792

[node name="LineEdit2" type="LineEdit" parent="."]
unique_name_in_owner = true
layout_mode = 2
offset_left = 3.86593
offset_top = 110.912
offset_right = 176.866
offset_bottom = 141.912

[node name="SpinBox" type="SpinBox" parent="."]
unique_name_in_owner = true
layout_mode = 2
offset_left = 59.5353
offset_top = 154.938
offset_right = 142.598
offset_bottom = 185.938

[node name="CheckBox" type="CheckBox" parent="."]
unique_name_in_owner = true
layout_mode = 2
offset_left = 87.37
offset_top = 204.044
offset_right = 111.37
offset_bottom = 228.044

[node name="CheckBox2" type="CheckBox" parent="."]
unique_name_in_owner = true
layout_mode = 2
offset_left = 143.039
offset_top = 242.99
offset_right = 167.039
offset_bottom = 266.99

[node name="Button" type="Button" parent="."]
layout_mode = 2
offset_left = 5.4123
offset_top = 283.629
offset_right = 133.413
offset_bottom = 314.629
text = "Convert"

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 3.86593
offset_top = 28.7862
offset_right = 43.8659
offset_bottom = 51.7862
text = "path"

[node name="Label2" type="Label" parent="."]
layout_mode = 0
offset_left = 4.63912
offset_top = 89.7453
offset_right = 132.639
offset_bottom = 112.745
text = "animation name"

[node name="Label3" type="Label" parent="."]
layout_mode = 0
offset_left = 5.4123
offset_top = 159.171
offset_right = 56.4123
offset_bottom = 182.171
text = "speed:"

[node name="Label4" type="Label" parent="."]
layout_mode = 0
offset_left = 5.4123
offset_top = 203.197
offset_right = 88.4123
offset_bottom = 226.197
text = "have loop?"

[node name="Label5" type="Label" parent="."]
layout_mode = 0
offset_left = 5.4123
offset_top = 242.143
offset_right = 145.412
offset_bottom = 265.143
text = "animation player?"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
